--- a/pop.css
+++ b/pop.css
@@ -4,8 +4,6 @@ html {
 
 body {
      background-color: yellow;
-    
-
 }
 
 .russo-one-regular {
@@ -33,7 +31,6 @@ body {
     margin-right: 20px;
   }
   
-  
 .Wrapper {
     padding: 30px;
 }
@@ -48,10 +45,12 @@ body {
     margin-bottom: 20px;
 }
 
-
-
 button {
     background-color: lightblue;
     border-radius: 10px;
     
+}
+
+.btn {
+    display: flex;
 }
